crates/service/tests/code_action/snapshots/features__code_action__convert_idx__block.snap
---
source: crates/service/tests/code_action/convert_idx.rs
expression: response
---
[
  {
    "title": "Convert numeric idx to identifier",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 5,
                "character": 12
              },
              "end": {
                "line": 5,
                "character": 13
              }
            },
            "newText": "$a"
          }
        ]
      }
    }
  }
]
