crates/service/tests/code_action/snapshots/features__code_action__convert_idx__ident_to_num.snap
---
source: crates/service/tests/code_action/convert_idx.rs
expression: response
---
[
  {
    "title": "Convert identifier to numeric idx",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 10
              },
              "end": {
                "line": 3,
                "character": 12
              }
            },
            "newText": "0"
          }
        ]
      }
    }
  }
]
