crates/service/tests/code_action/snapshots/features__code_action__convert_idx__param.snap
---
source: crates/service/tests/code_action/convert_idx.rs
expression: response
---
[
  {
    "title": "Convert numeric idx to identifier",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 15
              },
              "end": {
                "line": 3,
                "character": 16
              }
            },
            "newText": "$p"
          }
        ]
      }
    }
  }
]
